--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
+    "target": "ESNEXT",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
