--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
+    "@tanstack/react-query": "^4.23.0",
+    "@tanstack/react-query-devtools": "^4.24.4",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "crypto-js": "^4.1.1",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
     "framer-motion": "^8.2.4",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
     "react-hot-toast": "^2.4.0",
     "react-loading-skeleton": "^3.1.0",
-    "react-query": "^3.39.2",
     "react-router-dom": "^6.6.1",
+    "tailwindcss": "^3.2.4",
+    "vite-tsconfig-paths": "^4.0.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
